# xion-beginner-monorepo

./: .dockerignore  .gitignore  .npmrc  .railwayignore  CLAUDE.md  Dockerfile  docker-compose.yml  package.json  pnpm-lock.yaml  vercel.json
apps/backgammon-server/: .env.example  package.json  tsconfig.json
apps/backgammon-web/: .env.example  .vercel-trigger  next.config.ts  package.json
apps/burnt-pyramid/: .env.example  SECURITY_AUDIT.md  next.config.ts  package.json  tailwind.config.ts
apps/passport-backend/: .env.example  Dockerfile  package.json
apps/passport-ios/: .env.example  README.md  app.json  eas.json  metro.config.js  package.json
apps/passport-web/: .env.example  next.config.js  package.json
contracts/backgammon-game/: Cargo.toml  deploy.sh
contracts/pyramid-splitter/: Cargo.toml  deploy.sh
contracts/pyramid-splitter/src/: contract.rs  error.rs  lib.rs  msg.rs  state.rs
contracts/wager-escrow/: .gitignore  Cargo.toml  deploy.sh
contracts/wager-escrow/.cargo/: config.toml
contracts/wager-escrow/artifacts/: wager_escrow.wasm
contracts/wager-escrow/src/: contract.rs  error.rs  msg.rs  state.rs
docs/burnt-pyramid/: CLAUDE.md  README.md  prd.md
patches/: @burnt-labs+abstraxion-core+1.0.0-alpha.67.patch  @burnt-labs+abstraxion-react-native+1.0.0-alpha.16.patch  @burnt-labs+signers+1.0.0-alpha.6.patch  @burnt-labs__abstraxion-core@1.0.0-alpha.67.patch  @burnt-labs__abstraxion-react-native@1.0.0-alpha.16.patch  @burnt-labs__signers@1.0.0-alpha.6.patch
scripts/: apply-patches.sh  setup-gammon-nft.sh  setup-gammon-token.sh
(+172 files in other folders)
